[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-tools"
version = "0.1.0"
description = "A tool for managing and analyzing investment portfolios"
authors = [
    {name = "mcavoyst"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "python-dotenv",
    "requests",
    "tabulate"
]

[project.scripts]
finance-tools = "finance_tools.main:main"